--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.10+1
   fl_chart: ^0.68.0
+  provider: ^6.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
